[project]
name = "empyrealSDK"
version = "0.0.1"
authors = [
  { name="empyrealapp", email="dev@empyreal.app" },
]
description = "Empyreal SDK for web3 development"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/empyrealapp/empyrealSDK"
"Bug Tracker" = "https://github.com/empyrealapp/empyrealSDK/issues"


[build-system]
requires = ['setuptools >=61.0']
build-backend = 'setuptools.build_meta'
